--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,13 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
+    //For proper designing and style component name.
+    implementation 'com.google.android.material:material:1.3.0-alpha03'
+
+    //sdp for Universal font
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
+
+
     implementation 'com.google.firebase:firebase-analytics:17.5.0'
     implementation 'com.google.firebase:firebase-firestore:21.6.0'
     implementation 'com.firebaseui:firebase-ui-firestore:6.3.0'
